fix assert message. SERVER-2800