db/commands/distinct.cpp
@@ -116,7 +116,7 @@ namespace mongo {
                         int now = bb.len();
 
                         if(!isCountCommand) {
-                          uassert(10044,  "distinct too big, 4mb cap", ( now + e.size() + 1024 ) < bufSize );
+                          uassert(10044,  "distinct too big, 16mb cap", ( now + e.size() + 1024 ) < bufSize );
                         }
 
                         arr.append( e );
